Improved project structure for multiple Dash apps

--- a/app/base/templates/home.html
+++ b/app/base/templates/home.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 
   <html>
 
@@ -13,13 +13,12 @@
 
   <body>
     <section class="hero is-primary is-fullheight">
-      <!-- Hero head: will stick at the top -->
       <div class="hero-head">
         <nav class="navbar">
           <div class="container">
             <div class="navbar-brand">
               <a class="navbar-item">
-                <img src="https://bulma.io/images/bulma-type-white.png" alt="Logo">
+                <h1 class="title is-4">Dash Starter</h1>
               </a>
               <span class="navbar-burger" data-target="navbarMenuHeroA">
                 <span></span>
@@ -52,12 +51,16 @@
       <!-- Hero content: will be in the middle -->
       <div class="hero-body">
         <div class="container has-text-centered">
-          <p class="title">
-            Title
-          </p>
-          <p class="subtitle">
-            Subtitle
-          </p>
+
+          <div class="columns is-variable is-5 is-multiline">
+            <div class="column">
+              <a href="/dashboards/iris"><div class="box">Iris Dashboard</div></a>
+            </div>
+            <div class="column">
+              <a href="/dashboards/app2"><div class="box">Dashboard 2</div></a>
+            </div>
+          </div>
+
         </div>
       </div>
 
